--- a/lms/templates/courses_list.html
+++ b/lms/templates/courses_list.html
@@ -6,22 +6,31 @@
   <section class="highlighted-courses">
 
     % if settings.FEATURES.get('COURSES_ARE_BROWSABLE'):
-      <section class="courses">
+      <section class="courses" style="padding-bottom: 0;">
         <ul class="courses-listing">
           ## limiting the course number by using HOMEPAGE_COURSE_MAX as the maximum number of courses
-          %for course in courses[:homepage_course_max]:
+            <% idx = 0 %>
+          %for course in courses:
+          ##% if course.classfy == classfy or classfy == 'course_all':
+            <% idx += 1 %>
           <li class="courses-listing-item">
               <%include file="course.html" args="course=course" />
           </li>
-        %endfor
+            % if idx == 8:
+            <% break %>
+            % endif
+          ##% endif
+          %endfor
         </ul>
       </section>
-    ## in case there are courses that are not shown on the homepage, a 'View all Courses' link should appear
-      % if homepage_course_max and len(courses) > homepage_course_max:
-      <div class="courses-more">
-        <a class="courses-more-cta" href="${marketing_link('COURSES')}"> ${_("View all Courses")} </a>
-      </div>
-    % endif
+        ## in case there are courses that are not shown on the homepage, a 'View all Courses' link should appear
+        % if settings.HOMEPAGE_COURSE_MAX and len(courses) > settings.HOMEPAGE_COURSE_MAX:
+          <!--
+          <div class="courses-more">
+            <a class="courses-more-cta" href="${marketing_link('COURSES')}"> ${_("View all Courses")} </a>
+          </div>
+          -->
+        % endif
     % endif
 
   </section>
