--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -4,9 +4,193 @@
 <%!
 from django.utils.translation import ugettext as _
 from django.urls import reverse
-
+from microsite_configuration import microsite
 from openedx.core.djangolib.markup import HTML, Text
 %>
+<link rel="stylesheet" type="text/css" href="/static/css/pop.css">
+<!-- Popup Area
+<div id="layerPopupArea" class="layerPopupArea" style="top:110px !important; left:148px !important; position:fixed !important; display: block;">-->
+<div id="layerPopupArea" class="layerPopupArea">
+    ${ popup_index }
+
+</div>
+
+<script>
+    var popup_index = $('#layerPopupArea').text();
+    $('#layerPopupArea').html(popup_index);
+</script>
+
+<script type="text/javascript" src="/static/js/vendor/script.js"></script>
+
+<div id="layerPopupArea" class="layerPopupArea" style="">
+
+    <!--popup K-mooc(1)-->
+    <div id="popupWrap_1" class="layerPupup" style="display: block;position: fixed;top: 110px;">
+        <!-- image type -->
+        <!--
+        <a href="http://www.kmooc.kr/comm_notice_view/204/" target="_self">
+            <img src="http://www.kmooc.kr/asset-v1:KMOOC+DEMOk+2015_1+type@asset+block@20171215.jpg" alt="사이트 만족도 조사 완료">
+        </a>
+        -->
+
+        <!-- text type -->
+        % if platform_name == 'K-MOOC':
+        <p style="text-align: left; font-weight: bold; margin-top: 5px;" data-test="${platform_name}">
+            <a href="http://www.kmooc.kr/comm_view/N/1/245" target="_sub">
+            <img src="http://www.kmooc.kr/asset-v1:KMOOC+DEMOk+2015_1+type@asset+block@ppp.png" alt="2018" style="max-width: 800px;" />
+            </a>
+        </p>
+        % else:
+        <p style="text-align: left; font-weight: bold; margin-top: 5px;" data-test="${platform_name}">
+            <a href="http://www.kmooc.kr/comm_view/N/1/245" target="_sub">
+            <img src="http://www.kmooc.kr/asset-v1:KMOOC+DEMOk+2015_1+type@asset+block@ppp.png" alt="2018" style="max-width: 800px;" />
+            </a>
+        </p>
+        % endif
+
+        <!-- close area -->
+        <div style="text-align: right;">
+            <label onclick="closeWin1();">
+                <input id="chkbox_1" name="chkbox_1" type="checkbox" style="vertical-align: middle;">
+                <span style="font-style:normal; font-size:13px;"><b>다시 열지 않음 &nbsp;&nbsp;</b></span>
+            </label>
+
+            <span><a href="javascript:popClose('popupWrap_1');" title="닫기">[ ${'close' if LANG == 'en' else '닫기'} ]</a></span>
+        </div>
+    </div>
+
+    <!--popup K-mooc(2)-->
+
+
+    <div id="popupWrap_2" class="layerPupup" style="display: block;position: fixed;left: 565px;top: 110px;">
+        <p style="text-align: left; font-weight: bold; margin-top: 5px;" data-test="${platform_name}">
+            <a href="http://www.kmooc.kr/comm_view/N/1/246" target="_sub">
+            <img src="http://www.kmooc.kr/asset-v1:KMOOC+DEMOk+2015_1+type@asset+block@ppp2.PNG" alt="2018" style="max-width: 800px; width:465px;" />
+            </a>
+        </p>
+
+        <div style="text-align: right;">
+            <label onclick="closeWin2();">
+                <input id="chkbox_2" name="chkbox_2" type="checkbox" style="vertical-align: middle;">
+                <span style="font-style:normal; font-size:13px;"><b>다시 열지 않음 &nbsp;&nbsp;</b></span>
+            </label>
+
+            <span><a href="javascript:popClose('popupWrap_2');" title="닫기">[ 닫기 ]</a></span>
+        </div>
+    </div>
+</div>
+
+<script language="Javascript">
+
+
+$( document ).ready(function() {
+    $( ".slide_viewer" ).hover(function() {
+        $('#arrow_box_left').css("background-color", "#333");
+        $('#arrow_box_right').css("background-color", "#333");
+    },
+    function(){
+        $('#arrow_box_left').css("background-color", "");
+        $('#arrow_box_right').css("background-color", "");
+    });
+});
+
+
+
+function popClose(id){
+    $("#" + id).hide();
+}
+
+function setCookie( name, value, expiredays ) {
+    var todayDate = new Date();
+    todayDate.setDate( todayDate.getDate() + Number(expiredays) );
+    document.cookie = name + "=" + escape( value ) + "; path=/; expires=" + todayDate.toGMTString() + ";"
+}
+
+function closeWin(check, id, hidden_day) {
+    if ($("#" + check).is(":checked")){
+        setCookie( id , "done" , hidden_day);
+    }
+    $("#" + id).css("display" , "none");
+}
+
+cookiedata = document.cookie;
+
+$("#layerPopupArea .pop_content").each(function() {
+    var content_id = $(this).attr("id");
+    $("#"+content_id).html($("#"+content_id).text());
+});
+
+var leng = '${max_pop}';
+leng = Number(leng);
+for (var i = 1; i<=leng; i++) {
+    if (cookiedata.indexOf(i +"=done") < 0) {
+        %if LANG == 'en':
+            $("#" + i).css("display" , "none");
+        %else:
+            $("#" + i).css("display" , "inline-block !important;");
+        %endif
+} else {
+    $("#" + i).css("display" , "none");
+}
+}
+
+
+function setCookie1( name, value, expiredays ) {
+    var todayDate = new Date();
+    todayDate.setDate( todayDate.getDate() + parseInt(expiredays) );
+    document.cookie = name + "=" + escape( value ) + "; path=/; expires=" + todayDate.toGMTString() + ";"
+}
+function closeWin1() {
+    if ($("#chkbox_1").is(":checked")){
+        setCookie1( "popupdiv1", "done" , 10 );
+    }
+    document.all['popupWrap_1'].style.display = "none";
+}
+function closeWin2() {
+    if ($("#chkbox_2").is(":checked")){
+        setCookie1( "popupdiv2", "done" , 3 );
+    }
+    document.all['popupWrap_2'].style.display = "none";
+}
+cookiedata = document.cookie;
+popupDate = new Date();
+targetDate1 = new Date(2018, 1, 5); // Date(2018, 3, 20) -> 2018년 4월 20일에 팝업이 내려감
+targetDate2 = new Date(2018, 1, 5);
+console.log('>>>>>>>>>>>> ' + cookiedata.indexOf("popupdiv2=done") + ":" + popupDate.getFullYear() + ":" + popupDate.getMonth() + ":" + popupDate.getDate() + ":" + popupDate.getHours());
+if (
+        (cookiedata.indexOf("popupdiv1=done") < 0 ) && (
+        (popupDate < targetDate1)
+        )
+   )
+    {
+    % if LANG == 'en':
+        document.all['popupWrap_1'].style.display = "none";
+    % else:
+        document.all['popupWrap_1'].style.display = "block";
+    % endif
+} else {
+    document.all['popupWrap_1'].style.display = "none";
+}
+if (
+        (cookiedata.indexOf("popupdiv2=done") < 0 ) &&
+        (
+            (popupDate < targetDate2)
+        )
+   )
+    {
+    %if LANG == 'en':
+        document.all['popupWrap_2'].style.display = "none";
+    %else:
+        document.all['popupWrap_2'].style.display = "block";
+    %endif
+} else {
+    document.all['popupWrap_2'].style.display = "none";
+}
+</script>
+
+
+<!--<script src="${static.url('js/script/index_comm.js')}" charset="utf-8"></script>-->
+<script src="${static.url('js/script/index_search.js')}" charset="utf-8"></script>
 
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="home">
