--- a/lms/templates/courseware/course_about_sidebar_header.html
+++ b/lms/templates/courseware/course_about_sidebar_header.html
@@ -20,38 +20,23 @@ from six import text_type
         site_protocol = 'https' if settings.HTTPS == 'on' else 'http'
         platform_name = static.get_platform_name()
 
-        ## Translators: This text will be automatically posted to the student's
-        ## Twitter account. {url} should appear at the end of the text.
-        tweet_text = _("I just enrolled in {number} {title} through {account}: {url}").format(
-            number=course.number,
-            title=course.display_name_with_default_escaped,
-            account=static.get_value('course_about_twitter_account', settings.PLATFORM_TWITTER_ACCOUNT),
-            url=u"{protocol}://{domain}{path}".format(
-                protocol=site_protocol,
-                domain=site_domain,
-                path=urllib.quote_plus(
-                    reverse('about_course', args=[text_type(course.id)])
-                )
-            )
-        ).replace(u" ", u"+")
-        tweet_action = u"http://twitter.com/intent/tweet?text={tweet_text}".format(tweet_text=tweet_text)
+        url=u"http://{domain}{path}".format(
+            domain=site_domain,
+            path=reverse('about_course', args=[course.id.to_deprecated_string()])
+        )
 
-        facebook_link = static.get_value('course_about_facebook_link', settings.PLATFORM_FACEBOOK_ACCOUNT)
+        tweet_action = "https://twitter.com/intent/tweet?text=온라인수강&url={url}".format(url=urllib.quote(url.encode("utf-8")))
+
+        facebook_link = 'http://www.facebook.com/sharer/sharer.php?u={url}'.format(url=urllib.quote(url.encode("utf-8")))
 
         email_subject = u"mailto:?subject={subject}&body={body}".format(
             subject=_("Take a course with {platform} online").format(platform=platform_name),
-            body=_("I just enrolled in {number} {title} through {platform} {url}").format(
-                number=course.number,
-                title=course.display_name_with_default_escaped,
-                platform=platform_name,
-                url=u"{protocol}://{domain}{path}".format(
-                    protocol=site_protocol,
+            body=_("Take a course with {platform} online").format(
+                platform=u"http://{domain}{path}".format(
                     domain=site_domain,
-                    path=urllib.quote_plus(
-                        reverse('about_course', args=[text_type(course.id)]),
-                    )
+                    path=reverse('about_course', args=[course.id.to_deprecated_string()])
                 )
-            )
+        ).replace(u" ", u"+")
         ).replace(u" ", u"%20")
       %>
       <a href="${tweet_action}" class="share">
