--- a/lms/templates/certificates/_accomplishment-rendering_kmooc_N.html
+++ b/lms/templates/certificates/_accomplishment-rendering_kmooc_N.html
@@ -2,14 +2,13 @@
 <%namespace name='static' file='../static_content.html'/>
 <%
 accomplishment_course_title =  accomplishment_copy_course_name
-if certificate_data and certificate_data.get('course_title', ''):
-    accomplishment_course_title =  certificate_data.get('course_title', '')
+##if certificate_data and certificate_data.get('course_title', ''):
+##    accomplishment_course_title =  certificate_data.get('course_title', '')
 course_mode_class = course_mode if course_mode else ''
 if accomplishment_course_title.find('(') == -1 :
     accomplishment_course_title = accomplishment_course_title + '(' + accomplishment_course_title
 accomplishment_course_title = accomplishment_course_title.replace(')','').split('(')
 %>
-
 <style>
     body {
         width: 100%!important;
