게시물 모아보기 기능 추가

--- a/lms/templates/instructor/instructor_dashboard_2/data_download.html
+++ b/lms/templates/instructor/instructor_dashboard_2/data_download.html
@@ -17,6 +17,20 @@ from openedx.core.djangolib.markup import HTML, Text
 
   <p>${_("Click to download a CSV of anonymized student IDs:")}</p>
   <p><input type="button" name="list-anon-ids" value="${_("Get Student Anonymized IDs CSV")}" data-csv="true" class="csv" data-endpoint="${ section_data['get_anon_ids_url'] }" class="${'is-disabled' if disable_buttons else ''}" aria-disabled="${'true' if disable_buttons else 'false'}" ></p>
+
+  <!-- 게시글 모아보기 기능 추가 s -->
+  <p>${_("Get Student contents CSV")}</p>
+  <p>
+      <input type="button" name="list-contents-stat" value="${_("Get Student contents view CSV")}" data-csv="true" class="csv" data-endpoint="${ section_data['get_contents_view_url'] }" class="${'is-disabled' if disable_buttons else ''}" aria-disabled="${'true' if disable_buttons else 'false'}" >
+      <input type="button" name="list-contents-view" value="${_("Get Student contents stats CSV")}" data-csv="true" class="csv" data-endpoint="${ section_data['get_contents_stat_url'] }" class="${'is-disabled' if disable_buttons else ''}" aria-disabled="${'true' if disable_buttons else 'false'}" >
+  </p>
+
+    <!--
+    ## <input type="button" name="list-contents-stat" value="${_("Get Student contents stats CSV")}" data-csv="true" class="csv" data-endpoint="${ section_data['get_contents_stat_url'] }" class="${'is-disabled' if disable_buttons else ''}" aria-disabled="${'true' if disable_buttons else 'false'}" >
+    ## <input type="button" name="list-contents-view" value="${_("Get Student contents file CSV")}" data-csv="true" class="csv" data-endpoint="${ section_data['get_contents_view_url'] }" class="${'is-disabled' if disable_buttons else ''}" aria-disabled="${'true' if disable_buttons else 'false'}" >
+    -->
+  <!-- 게시글 모아보기 기능 추가 e -->
+
 </div>
 
 %if settings.FEATURES.get('ENABLE_GRADE_DOWNLOADS'):
