내용확인 후 포함필요. 검색엔진관련 정보 수정, 테스트  작업에서 발생한 오류 수정:Il-Hee, Maeng

--- a/cms/templates/settings_advanced.html
+++ b/cms/templates/settings_advanced.html
@@ -16,13 +16,17 @@
 <%block name="header_extras">
 % for template_name in ["advanced_entry", "basic-modal", "modal-button", "validation-error-modal"]:
   <script type="text/template" id="${template_name}-tpl">
-    <%static:include path="js/${template_name}.underscore" />
+    <%static:include path="js/${template_name}.underscore" args="is_staff='true'" />
   </script>
 % endfor
 </%block>
 
 <%block name="requirejs">
     require(["js/factories/settings_advanced"], function(SettingsAdvancedFactory) {
+
+        var is_staff = ${is_staff['is_staff']};
+        window.is_staff = is_staff;
+
         SettingsAdvancedFactory(
             ${advanced_dict | n, dump_js_escaped_json},
             "${advanced_settings_url | n, js_escaped_string}"
