--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -82,7 +82,7 @@ from pipeline_mako import render_require_js_path_overrides
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <link rel="icon" type="image/x-icon" href="${static.url(static.get_value('favicon_path', settings.FAVICON_PATH))}" />
-
+  <link rel="stylesheet" type="text/css" href="/static/css/star_rating.css" />
   <%static:css group='style-vendor'/>
   % if '/' in self.attr.main_css:
     % if get_language_bidi():
@@ -159,6 +159,7 @@ from pipeline_mako import render_require_js_path_overrides
     </script>
 % endif
 <link rel="stylesheet" type="text/css" href="/static/css/style.css?ver=1.5" />
+
 <% branch_key = static.get_value("BRANCH_IO_KEY", settings.BRANCH_IO_KEY) %>
 % if branch_key and not is_from_mobile_app:
     <script type="text/javascript">
