--- a/openedx/features/learner_profile/templates/learner_profile/learner_profile.html
+++ b/openedx/features/learner_profile/templates/learner_profile/learner_profile.html
@@ -36,11 +36,9 @@ from openedx.core.djangolib.markup import HTML
             </div>
             % if own_profile:
                 <div class="profile-header">
-                    <div class="header">${_("My Profile")}</div>
+                    <!--<div class="header">${_("My Profile")}</div>-->
                     <div class="subheader">
-                        ${_('Build out your profile to personalize your identity on {platform_name}.').format(
-                            platform_name=platform_name,
-                        )}
+                        ${_('Build out your profile to personalize your identity on {platform_name}.')}
                     </div>
                 </div>
             % endif
