--- a/lms/templates/courseware/course_review.html
+++ b/lms/templates/courseware/course_review.html
@@ -25,34 +25,70 @@
 </form>
 %endif
 
+<div class="rs">
+  <table>
+    <thead></thead>
+    <tr>
+      <td>id</td>
+      <td>content</td>
+      <td>별점</td>
+      <td>생성날짜</td>
+      <td></td>
+    </tr>
+    %for re_li in context['rev']:
+    <tr>
+      <td><h3>${re_li['username']}</h3></td>
+      <td>${re_li['content']}</td>
+      <td>
+        %if re_li['point'] ==1:
+        <img class="star_img_1" src="/static/images/star.png"/>
+        %elif re_li['point'] ==2:
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        %elif re_li['point'] ==3:
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        %elif re_li['point'] ==4:
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        %elif re_li['point'] ==5:
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        <img class="star_img_1" src="/static/images/star.png"/>
+        %endif
+      </td>
+      <td>${re_li['reg_time']}</td>
 
-
+      %if  re_li['user_id'] == user.id:
+      <td><button onclick="re_del(${re_li['seq']})" value="${re_li['seq']}"> 삭제 </button></td>
+      %endif
+    </tr>
+    %endfor
+  </table>
+</div>
+<div readonly hidden id="hidden_id" value="${user.id}">${user.id}</div>
 
 <script type="text/javascript">
     var star=''
     var review = ''
 
-    $.ajax({
-                url : '/course_review_list',
-                type: "POST",
-                data : {
-                    course_id:"${course.id}",
-                    csrfmiddlewaretoken: '${ csrf_token }'
-                }
-            }).done(function(data){
-                console.log(data)
-
-            })
+    $("#rate5").prop("checked", true)
 
     function chk() {
         star = $(".starability-basic input:radio[name='rating']:checked").val();
         review =$('#review_text').val();
 
-        if (star ==undefined || review.length==0){
-            alert("별점등록하고  리뷰써라")
-        }
-        else if (review.length > 100){
-            alert("너무길구나")
+        if (review.length > 100 || review.length==0){
+            swal(
+                'CAUTION',
+                '1 ~ 100자 이내로 작성해주세요',
+                'error'
+              )
         }
         else{
             //ajax
@@ -70,5 +106,24 @@
                 alert("완료")
             })
         }}
+    function re_del(del_seq) {
 
+        $.ajax({
+                url : '/course_review_del',
+                type: "POST",
+                data : {
+                    id:del_seq,
+                    user_id:$('#hidden_id').text(),
+                    csrfmiddlewaretoken: '${ csrf_token }'
+                }
+            }).done(function(data){
+                swal(
+                'Success',
+                '삭제 완료',
+                'success'
+              )
+              location.reload();
+            })
+
+    }
 </script>
