refactor: 공지사항 editor(tinymce) / fix:별점,리뷰 fix

--- a/cms/templates/course_info.html
+++ b/cms/templates/course_info.html
@@ -23,7 +23,7 @@ from openedx.core.djangolib.js_utils import (
 </%block>
 
 <%block name="requirejs">
-  require(["js/factories/course_info"], function(CourseInfoFactory) {
+  require(["js/factories/course_info", "js/vendor/tinymce/js/tinymce/tinymce.full.min", "js/vendor/tinymce/js/tinymce/jquery.tinymce.min"], function(CourseInfoFactory) {
       CourseInfoFactory(
         "${updates_url | n, js_escaped_string}",
         "${handouts_locator | n, js_escaped_string}",
@@ -57,6 +57,16 @@ from openedx.core.djangolib.js_utils import (
       <div class="introduction">
         <p class="copy">${_('Use course updates to notify students of important dates or exams, highlight particular discussions in the forums, announce schedule changes, and respond to student questions. You add or edit updates in HTML.')}</p>
       </div>
+    </section>
+  </div>
+  <div class="wrapper-content wrapper">
+    <section class="content">
+      <div class="introduction">
+        <p class="copy">
+          HTML로 직접작성이 어렵다면 아래 사이트를 이용해주세요.<br/>
+          (<a href="https://html-online.com/editor/" target="_blank">https://html-online.com/editor/</a> 접속하여 에디터 내에서 내용 작성 -> 소스버튼 클릭 -> 소스 복사해서 공지사항에 붙여넣기)
+        </p>
+          </div>
     </section>
   </div>
 
