--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -187,8 +187,9 @@ from pipeline_mako import render_require_js_path_overrides
     <%include file="/page_banner.html" />
 
     <div class="marketing-hero"><%block name="marketing_hero"></%block></div>
-
-    <div class="content-wrapper main-container" id="content">
+    <!-- 기존div-->
+    <!--<div class="content-wrapper main-container" id="content">-->
+    <div class="content-wrapper" id="content">
       ${self.body()}
       <%block name="bodyextra"/>
     </div>
