refactor: course_interest / 관심강좌

--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -120,6 +120,83 @@ from six import string_types
           <h1>
             ${course.display_name_with_default_escaped}
           </h1>
+          %if user.is_active ==True :
+          <div style="float: right; right: 0; position: absolute; margin-right: 20px;">
+             % if (flag == 1):
+             <a id="interest_btn_d" onclick="modi()" alt="관심강좌 삭제"><i style="color:#3e7bc0; font-size:36px; cursor:pointer;" onclick="change_i('nomal')" id ="nomal" class="fa fa-star fa-4x"  aria-hidden="true"></i></a><p class="arrow_box"></p>
+             <a id="interest_btn_i" onclick="add()" alt="관심강좌 추가"><i style="display:none; color:#eee; font-size:36px; cursor:pointer;" onclick="change_i('empty')" id ="empty" class="fa fa-star fa-4x"  aria-hidden="true"></i></a><p class="arrow_box"></p>
+             % else :
+             <a id="interest_btn_d" onclick="modi()" alt="관심강좌 삭제"><i style="display:none; color:#3e7bc0; font-size:36px; cursor:pointer; " onclick="change_i('nomal')" id ="nomal" class="fa fa-star fa-4x"  aria-hidden="true"></i></a><p class="arrow_box"></p>
+             <a id="interest_btn_i" onclick="add()" alt="관심강좌 추가"><i style="color:#eee; font-size:36px; cursor:pointer;" onclick="change_i('empty')" id ="empty" class="fa fa-star fa-4x"  aria-hidden="true"></i></a><p class="arrow_box"></p>
+             % endif
+          </div>
+          %endif
+              <script>
+
+                  function add() {
+                      try {
+                            var def_index = '${course.id}';
+                            var index_arr = [];
+                            index_arr = def_index.split("+");
+                            var user_id = '${user.id}';
+                            var org = '${course.org}';
+                            var display_number_with_default = index_arr[1];
+                            var action = 'add';
+
+                            $.post("/course_interest", {
+                                csrfmiddlewaretoken: $.cookie('csrftoken'),
+                                user_id : user_id,
+                                org: org,
+                                display_number_with_default: display_number_with_default,
+                                method : action,
+                            }).done(function (data) {
+
+                            }).fail(function (error) {
+                                alert('error = ' + error.responseJSON);
+                            });
+                        } catch (e) {
+                            alert(e);
+                        }
+                  }
+
+                  function modi() {
+                      try {
+                            var def_index = '${course.id}';
+                            var index_arr = [];
+                            index_arr = def_index.split("+");
+                            var user_id = '${user.id}';
+                            var org = '${course.org}';
+                            var display_number_with_default = index_arr[1];
+                            var action = 'modi';
+
+                            $.post("/course_interest", {
+                                csrfmiddlewaretoken: $.cookie('csrftoken'),
+                                user_id : user_id,
+                                org: org,
+                                display_number_with_default: display_number_with_default,
+                                method : action,
+                            }).done(function (data) {
+
+                            }).fail(function (error) {
+                                alert('error = ' + error.responseJSON);
+                            });
+                        } catch (e) {
+                            alert(e);
+                        }
+                  }
+
+
+                  function change_i(id) {
+                      if (id == 'nomal') {
+                        document.getElementById('empty').style.display = '';
+                        document.getElementById('nomal').style.display = 'none';
+                      }
+                      else if (id == 'empty') {
+                        document.getElementById('nomal').style.display = '';
+                        document.getElementById('empty').style.display = 'none';
+                      }
+                  }
+              </script>
           <br />
           <span>${course.display_org_with_default | h}</span>
         </div>
