--- a/lms/templates/dashboard/_dashboard_certificate_information.html
+++ b/lms/templates/dashboard/_dashboard_certificate_information.html
@@ -81,7 +81,7 @@ else:
                 </span>
               </li>
             % elif cert_status['status'] == 'downloadable' and cert_status.get('show_cert_web_view', False):
-              <!-- 여기가 이수증 보기 버튼(dashboard)-->
+              <!-- 여기가 이수증 보기 버튼 입니다..jhy -->
               <li class="action action-certificate">
                 <!-- 기존<a class="btn" href="${cert_status['cert_web_view_url']}" target="_blank"-->
                 <a class="btn" href="/cert_survey?hello=${cert_status['cert_web_view_url']}&course_id=${course_overview.id}&user_id=${user.id}" target="_blank"
@@ -89,7 +89,7 @@ else:
                   ${_("View {cert_name_short}").format(cert_name_short=cert_name_short,)}
                 </a>
               </li>
-              <!-- 여기가 이수증 보기 버튼(dashboard)-->
+              <!-- 여기가 이수증 보기 버튼 입니다..jhy -->
             % elif cert_status['status'] == 'downloadable' and enrollment.mode in CourseMode.NON_VERIFIED_MODES:
               <li class="action action-certificate">
                 <a class="btn" href="${cert_status['download_url']}"
