refactor:memo 기능 / courseware fix / dashboard fix

--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -28,6 +28,7 @@ from student.models import CourseEnrollment
 
 <%block name="pagetitle">${_("Dashboard")}</%block>
 <%block name="bodyclass">view-dashboard is-authenticated</%block>
+
 <style>
     .faq-tab {
         max-width: 600px;
@@ -46,12 +47,12 @@ from student.models import CourseEnrollment
     }
 
     .sub-end {
-        margin: 10px 0 10px 428px;
+        margin: 10px 0 10px 300px;
         display: none;
     }
 
     .sub-interest {
-        margin: 10px 0 10px 335px;
+        margin: 10px 0 10px 450px;
         display: none;
     }
 
@@ -89,6 +90,7 @@ from student.models import CourseEnrollment
         var xhr;
         $(".faq-tab a").click(function (e) {
             var status = $(this).data("status");
+            console.log(status)
             $(".progress").stop().css("width", "0%");
 
             if(xhr && xhr.readyState != 4)
@@ -268,7 +270,7 @@ from student.models import CourseEnrollment
                         </a>
                     % endif
 
-                    <a href="#" data-status="end" title="완료">${_("complete/end Course")}
+                    <a href="#" data-status="end" title="완료" style="font-size: 14px;">${_("complete/end Course")}
                         <div class="progress"></div>
                     </a>
 
