--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -188,7 +188,18 @@ if (
 }
 </script>
 
-
+<style>
+  .home > header .outer-wrapper {
+    width: 100%;height:100%;box-sizing:border-box;
+/**    padding:250px 0 240px 0;	**/
+	padding:100px 0 0 0; /** 20161215 **/
+}
+  .course-search{
+    width: 300px;
+    float: right;
+    margin-right: 30px;
+  }
+</style>
 <!--<script src="${static.url('js/script/index_comm.js')}" charset="utf-8"></script>-->
 <script src="${static.url('js/script/index_search.js')}" charset="utf-8"></script>
 
